--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Gallery</title>
+    <title>goit-js-hw-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section><img src="./public/favicon.svg" alt="GO-IT logo" /></section>
-    <h1 class="title">goit-js-hw-09</h1>
+    <section><img src="./img/go-it.svg" alt="GO-IT logo" /></section>
+    <h1 class="title">goit-js-hw-10</h1>
     <load ="partials/header.html" />
   </body>
 </html>
