--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -5,15 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery</title>
+    <title>Snackbar</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
       <a class="nav-item" href="./index.html">Go to home</a>
-      <h1 hidden>Welcome to Gallery</h1>
-      <ul class="gallery"></ul>
+      <h1 hidden>Welcome to Snackbar</h1>
     </section>
-    <script type="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
