--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section><img src="./img/go-it.svg" alt="GO-IT logo" /></section>
-    <h1 class="title">goit-js-hw-10</h1>
     <load ="partials/header.html" />
+    <section>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li>
+            <a href="./1-timer.html" class="nav-item">Timer</a>
+          </li>
+          <li>
+            <a href="./2-snackbar.html" class="nav-item">Snackbar</a>
+          </li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
