--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load ="partials/header.html" />
     <section>
-      <a class="nav-item" href="./index.html">Go to home</a>
-      <h1 hidden>Welcome to Timer</h1>
-      <input type="text" id="datetime-picker" />
-      <button type="button" data-start>Start</button>
+      <a class="nav-item" href="./index.html">home</a>
+      <h1 hidden>Timer</h1>
+      <div class="input-wrap">
+        <input type="text" id="datetime-picker" />
+        <button type="button" data-start>Start</button>
+      </div>
 
       <div class="timer">
         <div class="field">
