--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,9 +9,30 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load ="partials/header.html" />
     <section>
-      <a class="nav-item" href="./index.html">Go to home</a>
-      <h1 hidden>Welcome to Snackbar</h1>
+      <a class="nav-item" href="./index.html">home</a>
+      <h1 hidden>Snackbar</h1>
+      <form class="form">
+        <label>
+          Delay (ms)
+          <input type="number" name="delay" required />
+        </label>
+
+        <fieldset>
+          <legend>State</legend>
+          <label class="option">
+            <input type="radio" name="state" value="fulfilled" required />
+            Fulfilled
+          </label>
+          <label class="option">
+            <input type="radio" name="state" value="rejected" required />
+            Rejected
+          </label>
+        </fieldset>
+
+        <button type="submit">Create notification</button>
+      </form>
     </section>
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
